# protostore

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  hash.rs  lib.rs  pack.rs  profile.rs  reader.rs  store.rs  tree.rs
crates/core/tests/: mvp.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: lib.rs  mount.rs
examples/data/: hello.txt  nested.txt
