[workspace]
members = [
    "crates/core",
    "crates/fuse",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-channel = "2"
async-trait = "0.1"
blake3 = "1"
bytes = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
fuser = "0.15"
hex = "0.4"
ignore = "0.4"
io-uring = "0.6"
libc = "0.2"
object_store = { version = "0.13", features = ["aws", "gcp", "azure", "http"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-uring = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
walkdir = "2"
zstd = "0.13"
