[package]
name = "protostore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "protostore"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
protostore-core = { path = "../core" }
protostore-fuse = { path = "../fuse" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
