[package]
name = "protostore-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
hex.workspace = true
ignore.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true
zstd.workspace = true
